--- a/docker/mysql/conf.d/my.cnf
+++ b/docker/mysql/conf.d/my.cnf
@@ -12,17 +12,17 @@ log_timestamps = SYSTEM
 default_authentication_plugin= mysql_native_password
 
 # error log
-log-error = /var/log/StocklistLogs/mysql/mysql-error.log
+log-error = /var/log/mysql/error.log
 
 # slow_query log
 slow_query_log = 1
-slow_query_log_file = /var/log/StocklistLogs/mysql/mysql-slow.log
+slow_query_log_file = /var/log/mysql/query.log
 long_query_time = 5.0
 log_queries_not_using_indexes = 0
 
-# details log
+# general log
 general_log = 1
-general_log_file = /var/log/StocklistLogs/mysql/mysql-query.log
+general_log_file = /var/log/mysql/general.log
 
 
 [client]
