--- a/docker/nginx/default.conf
+++ b/docker/nginx/default.conf
@@ -8,8 +8,8 @@ server {
     index   index.php index.html index.htm;
 
     # log
-    access_log      /var/log/StocklistLogs/nginx/nginx_access.log;
-    error_log       /var/log/StocklistLogs/nginx/nginx_error.log  info;
+    access_log  /var/log/nginx/access.log;
+    error_log   /var/log/nginx/error.log;
 
     location / {
         try_files $uri $uri/ /index.php$is_args$args;
@@ -17,7 +17,7 @@ server {
 
     location ~ \.php$ {
         fastcgi_split_path_info ^(.+\.php)(/.+)$;
-        fastcgi_pass    php-fpm:9000;
+        fastcgi_pass    php:9000;
         fastcgi_index   index.php;
 
     include         fastcgi_params;
