--- a/docker/php/php.ini
+++ b/docker/php/php.ini
@@ -3,7 +3,7 @@ date.timezone = Asia/Tokyo
 
 # error log
 log_errors = On
-error_log = /var/StocklistLogs/php/php_error.log
+error_log = /var/log/php/error.log
 display_errors = Off
 
 # language
