--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,8 +10,9 @@ services:
         volumes:
             - ./src:/var/www
             - ./docker/nginx/default.conf:/etc/nginx/conf.d/default.conf
+            - ./docker/StocklistLogs/nginx:/var/log/nginx/
         depends_on:
-            - php-fpm
+            - php
   
     php:
         build: ./docker/php
@@ -19,6 +20,7 @@ services:
         container_name: "Stocklist-php-fpm"
         volumes:
             - ./src:/var/www
+            - ./docker/StocklistLogs/php:/var/log/php/
         links:
             - db
         depends_on:
@@ -30,12 +32,13 @@ services:
         volumes:
             - ./docker/mysql/conf.d:/etc/mysql/conf.d
             - ./docker/mysql/data:/var/lib/mysql
+            - ./docker/StocklistLogs/mysql:/var/log/mysql/
         ports:
-            - 3306:3306
+            - 3360:3306
         environment:
-            MYSQL_DATABASE: Stocklist-db
+            MYSQL_DATABASE: Stocklist-database
             MYSQL_USER: Stocklist-user
-            MYSQL_PASSWORD: Stocklist-pass
+            MYSQL_PASSWORD: Stocklist-password
             MYSQL_ROOT_PASSWORD: Stocklist-root
             TZ: "Asia/Tokyo"
         command: mysqld --character-set-server=utf8mb4 --collation-server=utf8mb4_unicode_ci
