--- a/src/.env.example
+++ b/src/.env.example
@@ -7,11 +7,11 @@ APP_URL=http://localhost
 LOG_CHANNEL=stack
 
 DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
+DB_HOST=Stocklist-db
 DB_PORT=3306
-DB_DATABASE=laravel
-DB_USERNAME=root
-DB_PASSWORD=
+DB_DATABASE=Stocklist-database
+DB_USERNAME=Stocklist-user
+DB_PASSWORD=Stocklist-password
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
