--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -27,7 +27,7 @@ services:
             - db
     
     db:
-        image: mysql:8.0.18
+        build: ./docker/mysql
         container_name: "Stocklist-db"
         volumes:
             - ./docker/mysql/conf.d:/etc/mysql/conf.d
@@ -41,4 +41,3 @@ services:
             MYSQL_PASSWORD: Stocklist-password
             MYSQL_ROOT_PASSWORD: Stocklist-root
             TZ: "Asia/Tokyo"
-        command: mysqld --character-set-server=utf8mb4 --collation-server=utf8mb4_unicode_ci
