--- a/docker/php/Dockerfile
+++ b/docker/php/Dockerfile
@@ -5,6 +5,7 @@ RUN apt-get update \
     && apt-get install -y zlib1g-dev libzip-dev mariadb-client \
     && docker-php-ext-install zip pdo_mysql
 
+RUN apt-get install -y graphviz
 # composer install
 COPY --from=composer:latest /usr/bin/composer /usr/bin/composer
 
