--- a/docker/mysql/conf.d/my.cnf
+++ b/docker/mysql/conf.d/my.cnf
@@ -3,6 +3,12 @@
 # language
 character-set-server = utf8mb4
 collation-server = utf8mb4_bin
+innodb_buffer_pool_size = 256M
+innodb_log_file_size = 64M
+
+read_buffer_size = 500M
+sort_buffer_size = 500M
+read_rnd_buffer_size = 1000M
 
 # timezone
 default-time-zone = SYSTEM
