--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,13 +3,13 @@ version: '3'
 services:
 
     nginx:    
-        image: nginx:1.17-alpine
-        container_name: "Stocklist-nginx"
+        image: nginx:1.20.0
+        container_name: Stocklist-nginx
         ports:
-            - "8080:80"
+            - 8080:80
         volumes:
-            - ./src:/var/www
-            - ./docker/nginx/default.conf:/etc/nginx/conf.d/default.conf
+            - ./src/public:/var/www/public
+            - ./docker/nginx/conf.d:/etc/nginx/conf.d
             - ./docker/StocklistLogs/nginx:/var/log/nginx/
         depends_on:
             - php
@@ -17,7 +17,7 @@ services:
     php:
         build: ./docker/php
         user: ${user}
-        container_name: "Stocklist-php-fpm"
+        container_name: Stocklist-php-fpm
         volumes:
             - ./src:/var/www
             - ./docker/StocklistLogs/php:/var/log/php/
@@ -28,7 +28,7 @@ services:
     
     db:
         build: ./docker/mysql
-        container_name: "Stocklist-db"
+        container_name: Stocklist-db
         ports:
             - 3360:3306
         environment:
@@ -36,4 +36,13 @@ services:
             MYSQL_USER: Stocklist-user
             MYSQL_PASSWORD: Stocklist-password
             MYSQL_ROOT_PASSWORD: Stocklist-root
-            TZ: "Asia/Tokyo"
+            TZ: Asia/Tokyo
+
+    node:
+        build: ./docker/node
+        container_name: Stocklist-node
+        volumes:
+            - ./client:/mnt/client/
+        stdin_open: true
+        tty: true
+        command: [sh, -c, npm install && npm run serve -- --port 8080] 
