--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
     "register-service-worker": "^1.7.1",
     "vue": "^2.6.11",
     "vue-router": "^3.2.0",
+    "vue-touch": "^2.0.0-beta.4",
     "vuetify": "^2.4.0",
     "vuex": "^3.4.0"
   },
