--- a/src/composer.json
+++ b/src/composer.json
@@ -19,6 +19,7 @@
         "filp/whoops": "^2.0",
         "fzaninotto/faker": "^1.4",
         "mockery/mockery": "^1.0",
+        "mpociot/laravel-apidoc-generator": "^4.8",
         "nunomaduro/collision": "^3.0",
         "phpunit/phpunit": "^8.0"
     },
