--- a/docker/nginx/conf.d/default.conf
+++ b/docker/nginx/conf.d/default.conf
@@ -18,13 +18,14 @@ server {
     proxy_cache_bypass $http_upgrade;
     proxy_set_header Host $host;
 
-    location / {
-        proxy_pass http://node:8080;
-    }
 
     # laravel
     location /api {
         try_files $uri $uri/ /index.php?$query_string;
+    }
+
+    location /storage {
+        alias /var/www/public/storage;
     }
 
     location ~ \.php$ {
@@ -35,6 +36,14 @@ server {
         include fastcgi_params;
         fastcgi_param SCRIPT_FILENAME $realpath_root$fastcgi_script_name;
         fastcgi_param PATH_INFO $fastcgi_path_info;
+    }
+
+    location /docs {
+        alias /var/www/public/docs;
+    }
+
+    location / {
+        proxy_pass http://node:8080;
     }
 
 }
