--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -28,7 +28,7 @@ services:
             - db
     
     db:
-        image: mariadb:10.6.2
+        build: ./docker/mysql
         container_name: Stocklist-db
         ports:
             - 3360:3306
