--- a/docker/nginx/conf.d/default.conf
+++ b/docker/nginx/conf.d/default.conf
@@ -25,7 +25,7 @@ server {
     }
 
     location /storage {
-        alias /var/www/public/storage;
+        alias /var/www/storage/app/storage;
     }
 
     location ~ \.php$ {
