--- a/src/.env.example
+++ b/src/.env.example
@@ -43,5 +43,5 @@ PUSHER_APP_CLUSTER=mt1
 MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
 
-SANCTUM_STATEFUL_DOMAINS=localhost:8080
+SANCTUM_STATEFUL_DOMAINS=localhost
 SESSION_DOMAIN=
